--- a/app/src/main/res/layout/layout_admin.xml
+++ b/app/src/main/res/layout/layout_admin.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="16dp"
-    android:paddingTop="70dp"
+    android:paddingTop="0dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:background="@drawable/bg"
@@ -23,7 +23,7 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="#F3D82BA7"
-        />
+        android:layout_marginTop="50dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +32,8 @@
         android:layout_marginTop="90dp"
         android:orientation="vertical"
         android:paddingLeft="30dp"
-        android:paddingRight="29dp">
+        android:paddingRight="29dp"
+        android:paddingTop="50dp">
 
         <Button
             android:id="@+id/btnThemQuanKhungAdmin"
@@ -55,6 +56,14 @@
 
 
     </LinearLayout>
+    <Button
+        android:id="@+id/btnLogOutAdmin"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/log"
+        android:layout_marginTop="48dp"
+        />
 
 
 
