--- a/app/src/main/res/layout/layout_quan_an.xml
+++ b/app/src/main/res/layout/layout_quan_an.xml
@@ -6,23 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="16dp"
-    android:paddingTop="60dp"
+    android:paddingTop="0dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:background="@drawable/bg"
-    tools:context=".WelcomActivity">
-
+    android:background="@drawable/bg">
 
 
     <TextView
+        android:id="@+id/twTenQuan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quán ăn"
         android:layout_centerHorizontal="true"
-        android:textSize="40sp"
-        android:textStyle="bold"
+        android:text="Quán ăn"
         android:textColor="#F3F436BE"
-        />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +30,8 @@
         android:layout_marginTop="80dp"
         android:orientation="vertical"
         android:paddingLeft="40dp"
-        android:paddingRight="40dp">
+        android:paddingRight="40dp"
+        android:paddingTop="@dimen/size30dp">
 
         <Button
             android:id="@+id/btnXemMon"
@@ -72,13 +71,13 @@
 
     </LinearLayout>
 
-
-
-
-
-
-
-
+    <Button
+        android:id="@+id/btnLogOutQuan"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/log"
+        />
 
 
 </RelativeLayout>
