--- a/app/src/main/res/layout/layout_admin.xml
+++ b/app/src/main/res/layout/layout_admin.xml
@@ -8,7 +8,6 @@
     android:paddingBottom="16dp"
     android:paddingTop="0dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
     android:background="@drawable/bg"
 
     tools:context=".WelcomActivity">
@@ -23,26 +22,25 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="#F3D82BA7"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="45dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="180dp"
         android:orientation="vertical"
-        android:paddingLeft="30dp"
-        android:paddingRight="29dp"
-        android:paddingTop="50dp">
+        android:paddingLeft="40dp"
+        android:paddingRight="29dp">
 
         <Button
             android:id="@+id/btnThemQuanKhungAdmin"
             android:layout_width="320dp"
             android:layout_height="60dp"
-            android:layout_marginTop="@dimen/size15dp"
             android:background="@drawable/duongvien_xanh"
             android:text="Thêm tài khoản Quán ăn"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textAllCaps="false"/>
 
         <Button
             android:id="@+id/btnXoaQuanKhungAdmin"
@@ -51,18 +49,28 @@
             android:layout_marginTop="@dimen/size25dp"
             android:background="@drawable/duongvien_xanh"
             android:text="Xóa tài khoản quán ăn"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textAllCaps="false"/>
 
 
 
     </LinearLayout>
     <Button
         android:id="@+id/btnLogOutAdmin"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/log"
+        android:background="@drawable/off"
         android:layout_marginTop="48dp"
+        android:layout_marginRight="@dimen/size15dp"/>
+    <Button
+        android:id="@+id/btnChangePassAdmin"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/key"
+        android:layout_marginTop="110dp"
+        android:layout_marginRight="15dp"
         />
 
 
