--- a/app/src/main/res/layout/layout_admin.xml
+++ b/app/src/main/res/layout/layout_admin.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="16dp"
     android:paddingTop="0dp"
     android:paddingLeft="16dp"
-    android:background="@drawable/bg"
+    android:background="@drawable/food2"
 
     tools:context=".WelcomActivity">
 
@@ -17,18 +17,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Admin"
+        android:text="admin"
         android:layout_centerHorizontal="true"
         android:textSize="40sp"
-        android:textStyle="bold"
-        android:textColor="#F3D82BA7"
+        android:textColor="@color/colorWhite"
+        android:fontFamily="@font/nabila"
         android:layout_marginTop="45dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="200dp"
         android:orientation="vertical"
         android:paddingLeft="40dp"
         android:paddingRight="29dp">
