--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -7,12 +7,10 @@
     android:layout_height="match_parent"
     android:paddingBottom="16dp"
     android:paddingTop="40dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
 
-    android:background="@color/colorPrimary"
-
-    tools:context=".WelcomActivity">
+    android:background="@drawable/food3">
 
 
     <TextView
@@ -23,6 +21,7 @@
         android:textSize="35sp"
         android:textStyle="bold"
         android:textColor="@color/colorWhite"
+        android:fontFamily="@font/nabila"
         />
 
     <LinearLayout
@@ -38,14 +37,12 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_margin="@dimen/size15dp"
-            android:background="@color/colorWhite"
-            android:drawableLeft="@drawable/user"
+            android:drawableLeft="@drawable/mail1"
             android:drawablePadding="@dimen/size10dp"
             android:hint="@string/tendangnhap"
             android:inputType="textEmailAddress"
-            android:padding="@dimen/size10dp"
             android:singleLine="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGray"
             android:textSize="20sp" />
 
@@ -54,14 +51,12 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_margin="@dimen/size15dp"
-            android:background="@color/colorWhite"
-            android:drawableLeft="@drawable/password"
+            android:drawableLeft="@drawable/pass1"
             android:drawablePadding="@dimen/size15dp"
             android:hint="@string/pass"
             android:inputType="textPassword"
-            android:padding="@dimen/size10dp"
             android:singleLine="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGray"
             android:textSize="20sp" />
 
@@ -70,14 +65,12 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_margin="@dimen/size15dp"
-            android:background="@color/colorWhite"
-            android:drawableLeft="@drawable/name"
+            android:drawableLeft="@drawable/name1"
             android:drawablePadding="@dimen/size10dp"
             android:hint="@string/name"
             android:inputType="text"
-            android:padding="@dimen/size10dp"
             android:singleLine="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGray"
             android:textSize="20sp" />
 
@@ -87,14 +80,12 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_margin="@dimen/size15dp"
-            android:background="@color/colorWhite"
-            android:drawableLeft="@drawable/phone"
+            android:drawableLeft="@drawable/phone1"
             android:drawablePadding="@dimen/size10dp"
             android:hint="@string/phone"
             android:inputType="phone"
-            android:padding="@dimen/size10dp"
             android:singleLine="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGray"
             android:textSize="20sp" />
 
@@ -103,14 +94,12 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_margin="@dimen/size15dp"
-            android:background="@color/colorWhite"
-            android:drawableLeft="@drawable/address"
+            android:drawableLeft="@drawable/address1"
             android:drawablePadding="@dimen/size10dp"
             android:hint="@string/address"
             android:inputType="text"
-            android:padding="@dimen/size10dp"
             android:singleLine="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGray"
             android:textSize="20sp" />
 
@@ -128,7 +117,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/duongvien_xanh"
                 android:text="@string/dangky"
-
+                android:textAllCaps="false"
                 android:textSize="20sp" />
 
             <Button
@@ -138,10 +127,9 @@
                 android:layout_margin="@dimen/size10dp"
                 android:layout_weight="1"
                 android:text="Thoát"
+                android:textAllCaps="false"
                 android:background="@drawable/duongvien_nau"
-                android:textSize="20sp"
-
-                />
+                android:textSize="20sp" />
 
 
         </LinearLayout>
