--- a/app/src/main/res/layout/layout_xem_dsmon.xml
+++ b/app/src/main/res/layout/layout_xem_dsmon.xml
@@ -12,11 +12,12 @@
     android:paddingBottom="10dp">
 
     <Button
-        android:layout_marginTop="@dimen/size10dp"
+        android:layout_marginTop="@dimen/size15dp"
         android:id="@+id/btnback"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/back"/>
+
+        android:background="@drawable/back1"/>
 
     <TextView
         android:layout_marginTop="@dimen/size10dp"
